--- a/XF.Material.Outline.Sample/XF.Material.Outline.Sample/XF.Material.Outline.Sample.csproj
+++ b/XF.Material.Outline.Sample/XF.Material.Outline.Sample/XF.Material.Outline.Sample.csproj
@@ -12,10 +12,10 @@
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.800" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\XF.Material.Outline\XF.Material.Outline.csproj" />
+    <ProjectReference Include="..\..\XF.Material.Outline\XF.Material.Outline.Core\XF.Material.Outline.Core.csproj" />
+    <ProjectReference Include="..\..\XF.Material.Outline\XF.Material.Outline.iOS\XF.Material.Outline.iOS.csproj" />
   </ItemGroup>
 </Project>
