Add Text bindable property, add render correct height in helper text/no helper text scenarios, add init methods to ensure control is loaded per platform

--- a/XF.Material.Outline/XF.Material.Outline.Android/XF.Material.Outline.Android.csproj
+++ b/XF.Material.Outline/XF.Material.Outline.Android/XF.Material.Outline.Android.csproj
@@ -78,6 +78,7 @@
   <ItemGroup>
     <Compile Include="InternalTextViewRenderer.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
+    <Compile Include="Outline.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
