--- a/XF.Material.Outline.Sample/XF.Material.Outline.Sample.Android/XF.Material.Outline.Sample.Droid.csproj
+++ b/XF.Material.Outline.Sample/XF.Material.Outline.Sample.Android/XF.Material.Outline.Sample.Droid.csproj
@@ -100,9 +100,9 @@
     <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\XF.Material.Outline\XF.Material.Outline.Android\XF.Material.Outline.Android.csproj">
+    <ProjectReference Include="..\..\XF.Material.Outline\XF.Material.Outline.Android\XF.Material.Outline.Droid.csproj">
       <Project>{f085c3e8-bb5e-48fa-a8dc-cc9e69bb041d}</Project>
-      <Name>XF.Material.Outline.Android</Name>
+      <Name>XF.Material.Outline.Droid</Name>
     </ProjectReference>
     <ProjectReference Include="..\XF.Material.Outline.Sample\XF.Material.Outline.Sample.csproj">
       <Project>{D4F99A16-BEDF-434B-BBD9-E439CEC259D6}</Project>
