--- a/XF.Material.Outline/XF.Material.Outline.Android/XF.Material.Outline.Droid.csproj
+++ b/XF.Material.Outline/XF.Material.Outline.Android/XF.Material.Outline.Droid.csproj
@@ -10,8 +10,8 @@
     <TemplateGuid>{9ef11e43-1701-4396-8835-8392d57abb70}</TemplateGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>XF.Material.Outline.Android</RootNamespace>
-    <AssemblyName>XF.Material.Outline.Android</AssemblyName>
+    <RootNamespace>XF.Material.Outline.Droid</RootNamespace>
+    <AssemblyName>XF.Material.Outline.Droid</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
@@ -77,12 +77,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="InternalTextViewRenderer.cs" />
-    <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Outline.cs" />
+    <Compile Include="Resources\Resource.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
