--- a/XF.Material.Outline.Sample/XF.Material.Outline.Sample.Android/XF.Material.Outline.Sample.Droid.csproj
+++ b/XF.Material.Outline.Sample/XF.Material.Outline.Sample.Android/XF.Material.Outline.Sample.Droid.csproj
@@ -8,7 +8,7 @@
     <TemplateGuid>{c9e5eea5-ca05-42a1-839b-61506e0a37df}</TemplateGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>XF.Material.Outline.Sample.Droid</RootNamespace>
-    <AssemblyName>XF.Material.Outline.Sample.Android</AssemblyName>
+    <AssemblyName>XF.Material.Outline.Sample.Droid</AssemblyName>
     <Deterministic>True</Deterministic>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
